# cats-fun-site

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  manage.py  pyproject.toml  ruff.toml
.github/workflows/: code-quality-main.yaml  test.yml
algo/: admin.py  apps.py  forms.py  models.py  solver.py  urls.py  views.py
algo/migrations/: 0001_initial.py  0002_taskresult.py
algo/templates/algo/: history.html  index.html  menu.html  task.html  task_result.html
algo/utils/: ordering_filtering.py  stats.py
cats/: admin.py  forms.py  models.py  urls.py  views.py
cats/migrations/: 0001_initial.py  0002_person_age_lte_120.py  0003_remove_person_age_lte_120_person_age_lte_120.py  0004_visitor_delete_person_visitor_age_lte_120_and_more.py  0005_alter_visitor_breed.py  0006_alter_visitor_cat_age.py  0007_alter_visitor_age_alter_visitor_cat_age.py  0008_alter_visitor_age.py
cats/static/cats/: navigation.css
cats/templates/cats/: guests.html  index.html  memes.html  menu.html  perse.html  person.html  scotland.html  visitor.html  wild.html
cats_fun_site/: asgi.py  settings.py  urls.py  wsgi.py
polls/: admin.py  tests.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/polls/: detail.html  index.html  results.html
scripts/: ubuntu_build_python.sh
templates/admin/: base_site.html
