[tool.poetry]
name = "cats-fun-site"
version = "0.1.0"
description = ""
authors = ["yulachi <yuafilippova@edu.hse.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cats_fun_site"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"


[tool.poetry.group.dev.dependencies]
ruff = ">=0.0.254"
black = ">=23.1.0"
pre-commit = ">=3.1.1"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
